<resources>
    <string name="app_name">RukiaPics</string>
    <string name="action_settings">Settings</string>
    <string name="insert_tags">Tags...</string>
    <string name="tag_explanation">Write tags separated by comma</string>
    <string name="pic_content_description">Picture</string>

    <string name="fastscroller_track" translatable="false">FastScroller track</string>
    <string name="fastscroller_handle" translatable="false">FastScroller handle</string>
    <string name="no_tags">No tags typed</string>
    <string name="action_order_date_published">Order by date published</string>
    <string name="action_order_date_taken">Order by date taken</string>
    <string name="by">By:</string>
    <string name="date_published">Published:</string>
    <string name="date_taken">Taken:</string>
    <string name="open_browser">Open in browser</string>
    <string name="save_gallery">Save in Gallery</string>
    <string name="close">Close</string>
    <string name="imagine">imagine</string>
    <string name="create">create</string>
    <string name="null_content_description" translatable="false"> </string>
    <string name="rukia">rukia</string>
    <string name="soft">soft</string>
    <string name="category_application">Application settings</string>
    <string name="title_list_preference">Number of pics</string>
    <string name="summary_list_preference">Select the number of pictures returned by Flickr</string>
    <string name="permissions_title">Permission</string>
    <string name="permission_explanation">This permission is needed to save the pic in your gallery</string>
    <string name="operation_not_allowed">Operation not allowed</string>
    <string name="image_saved">Image saved successfully</string>

</resources>
