<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:background="@android:color/black">
    <LinearLayout
        android:id="@+id/layout_circles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:visibility="visible"
        >
        <ImageView
            android:id="@+id/circle1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:layout_width="@dimen/circle_radius"
            android:layout_height="@dimen/circle_radius"
            android:layout_marginLeft="@dimen/circle_space"
            android:layout_marginRight="@dimen/circle_space"
            android:background="@drawable/circle1"
            android:contentDescription="@string/null_content_description"
        />
        <ImageView
            android:id="@+id/circle2"
            android:layout_gravity="center"
            android:layout_width="@dimen/circle_radius"
            android:layout_height="@dimen/circle_radius"
            android:layout_marginLeft="@dimen/circle_space"
            android:layout_marginRight="@dimen/circle_space"
            android:background="@drawable/circle2"
            android:contentDescription="@string/null_content_description"
        />
        <ImageView
            android:id="@+id/circle3"
            android:layout_gravity="center"
            android:layout_width="@dimen/circle_radius"
            android:layout_height="@dimen/circle_radius"
            android:layout_marginLeft="@dimen/circle_space"
            android:layout_marginRight="@dimen/circle_space"
            android:background="@drawable/circle3"
            android:contentDescription="@string/null_content_description"
        />
        <ImageView
            android:id="@+id/circle4"
            android:layout_gravity="center"
            android:layout_width="@dimen/circle_radius"
            android:layout_height="@dimen/circle_radius"
            android:layout_marginLeft="@dimen/circle_space"
            android:layout_marginRight="@dimen/circle_space"
            android:background="@drawable/circle4"
            android:contentDescription="@string/null_content_description"
        />
        <ImageView
            android:id="@+id/circle5"
            android:layout_gravity="center"
            android:layout_width="@dimen/circle_radius"
            android:layout_height="@dimen/circle_radius"
            android:layout_marginLeft="@dimen/circle_space"
            android:layout_marginRight="@dimen/circle_space"
            android:background="@drawable/circle5"
            android:contentDescription="@string/null_content_description"
        />
        <ImageView
            android:id="@+id/circle6"
            android:layout_gravity="center"
            android:layout_width="@dimen/circle_radius"
            android:layout_height="@dimen/circle_radius"
            android:layout_marginLeft="@dimen/circle_space"
            android:layout_marginRight="@dimen/circle_space"
            android:background="@drawable/circle6"
            android:contentDescription="@string/null_content_description"
        />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_imagine_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:visibility="visible">
        <TextView
            android:id="@+id/text_imagine_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imagine"
            android:textAllCaps="true"
            android:layout_marginRight="@dimen/margin_imagine_right"
            android:layout_marginEnd="@dimen/margin_imagine_right"
            android:textSize="@dimen/imaginecreate_sp"
            android:textStyle="bold"
            android:textColor="#2ba9f1"
            />
        <TextView
            android:id="@+id/text_create_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginLeft="@dimen/margin_create_left"
            android:layout_marginStart="@dimen/margin_create_left"
            android:layout_marginRight="@dimen/margin_create_right"
            android:layout_marginEnd="@dimen/margin_create_right"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/imaginecreate_sp"
            android:textColor="#f419c8"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_rukiasoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:visibility="visible"
        >
        <TextView
            android:id="@+id/text_rukia_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rukia"
            android:textSize="@dimen/rukiasoft_sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="#f17f2b"
            />
        <TextView
            android:id="@+id/text_soft_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soft"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/rukiasoft_sp"
            android:textColor="#66f419"
            />
    </LinearLayout>

</FrameLayout>